--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="style/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/fontawesome-free-5.14.0-web/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 img-header">
-                    <img src="img/profile.png" alt="" class="ml-5">
+                    <img src="img/profile.jpg" alt="" class="ml-5">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 text-header">
                     <nav class="row navbar navbar-expand-lg navbar-dark">
@@ -62,7 +63,7 @@
           <div class="row">
             <div class="col-lg-12 timeline-add">
               <ul class="timeline">
-                <li>
+                <li data-aos="zoom-in-up" data-aos-duration="1000">
                   <div class="timeline-image">
                     <img class="rounded-circle img-fluid" src="img/biography/smk.png" alt="">
                   </div>
@@ -76,7 +77,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="timeline-inverted">
+                <li class="timeline-inverted" data-aos="zoom-in-up" data-aos-duration="1000">
                   <div class="timeline-image">
                     <img class="rounded-circle img-fluid" src="img/biography/d3.png" alt="">
                   </div>
@@ -90,7 +91,7 @@
                     </div>
                   </div>
                 </li>
-                <li>
+                <li data-aos="zoom-in-up" data-aos-duration="1000">
                   <div class="timeline-image">
                     <img class="rounded-circle img-fluid" src="img/biography/s1.png" alt="">
                   </div>
@@ -104,7 +105,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="timeline-inverted ">
+                <li class="timeline-inverted" data-aos="zoom-in-up" data-aos-duration="1000">
                   <div class="timeline-image">
                     <img class="rounded-circle img-fluid" src="img/biography/now.png" alt="">
                   </div>
@@ -134,7 +135,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4">
-              <div class="card border-light text-center webdev" style="max-width: 18rem;">
+              <div class="card border-light text-center webdev" style="max-width: 18rem;" data-aos="fade-up" data-aos-duration="1000">
                 <div class="img-circle mb-3">
                   <img src="img/skill/code.png" alt="" class="img-skill">
                 </div>
@@ -154,7 +155,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card border-light text-center uiux" style="max-width: 18rem;">
+              <div class="card border-light text-center uiux" style="max-width: 18rem;" data-aos="fade-up" data-aos-duration="2000">
                 <div class="img-circle mb-3">
                   <img src="img/skill/design.png" alt="" class="img-skill">
                 </div>
@@ -174,7 +175,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card border-light text-center network" style="max-width: 18rem;">
+              <div class="card border-light text-center network" style="max-width: 18rem;" data-aos="fade-up" data-aos-duration="3000">
                 <div class="img-circle mb-3">
                   <img src="img/skill/network.png" alt="" class="img-skill">
                 </div>
@@ -207,7 +208,7 @@
           </div>
           <div class="row text-center">
             <div class="col-lg-4 col-sm-6">
-              <div class="card porto1" style="width: 18rem;">
+              <div class="card porto1" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="1000">
                 <img class="card-img-top" src="img/porto/barber.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
@@ -216,7 +217,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <div class="card porto2" style="width: 18rem;">
+              <div class="card porto2" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img class="card-img-top" src="img/porto/igracias.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
@@ -225,7 +226,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <div class="card porto3" style="width: 18rem;">
+              <div class="card porto3" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="3000">
                 <img class="card-img-top" src="img/porto/planet pets.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
@@ -236,7 +237,7 @@
           </div>
           <div class="row text-center">
             <div class="col-lg-4 col-sm-4">
-              <div class="card porto1" style="width: 18rem;" data-toggle="modal" data-target="#exampleModal">
+              <div class="card porto1" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="1000" data-toggle="modal" data-target="#exampleModal">
                 <img class="card-img-top" src="img/porto/barber.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">UI/UX Design</h5>
@@ -245,7 +246,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
-              <div class="card porto2" style="width: 18rem;">
+              <div class="card porto2" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img class="card-img-top" src="img/porto/igracias.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">UI/UX Design</h5>
@@ -254,7 +255,7 @@
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
-              <div class="card porto3" style="width: 18rem;">
+              <div class="card porto3" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="3000">
                 <img class="card-img-top" src="img/porto/planet pets.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-text">UI/UX Design</h5>
@@ -294,11 +295,11 @@
               <h2 class="section-heading text-uppercase">Contact</h2>
               <hr>
               <div class="icon-contact">
-                <a href="mailto:gilarromadhon@gmail.com"><img src="img/contact/mail.png" alt=""></a>                        
-                <a href="https://api.whatsapp.com/send?phone=6281214125517&text=Assalamualaikum%20wr%20wb"><img src="img/contact/wa.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/gilarromadhon/"><img src="img/contact/linkedin.png" alt=""></a>
-                <a href="https://www.github.com/gilarromadhon/"><img src="img/contact/github.png" alt=""></a>
-                <a href="https://www.dribbble.com/gilarromadhon"><img src="img/contact/dribbble.png" alt=""></a>
+                <a href="mailto:gilarromadhon@gmail.com"><img src="img/contact/mail.png" alt="" data-aos="fade-up" data-aos-duration="1000"></a>                        
+                <a href="https://api.whatsapp.com/send?phone=6281214125517&text=Assalamualaikum%20wr%20wb"><img src="img/contact/wa.png" alt="" data-aos="fade-up" data-aos-duration="1500"></a>
+                <a href="https://www.linkedin.com/in/gilarromadhon/"><img src="img/contact/linkedin.png" alt="" data-aos="fade-up" data-aos-duration="2000"></a>
+                <a href="https://www.github.com/gilarromadhon/"><img src="img/contact/github.png" alt="" data-aos="fade-up" data-aos-duration="2500"></a>
+                <a href="https://www.dribbble.com/gilarromadhon"><img src="img/contact/dribbble.png" alt="" data-aos="fade-up" data-aos-duration="3000"></a>
               </div>
               <h6 class="font-weight-lighter text-muted">Copyright &copy; Gilar Romadhon 2020.</h6>
             </div>
@@ -308,5 +309,11 @@
 
     <script src="style/jquery-3.5.1.min.js"></script>
     <script src="style/bootstrap/js/bootstrap.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
+
+
+<script>
+    AOS.init();
+</script>
