--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
                         </div>
                     </nav>
                     <div class="mt-5 ml-5">
-                        <h2 class="mb-3">Hello</h2>
+                        <h2 class="mb-3">Hello.</h2>
                         <h3 class="mb-3">I'm Gilar Romadhon</h3>
-                        <h5 class="mb-5">Front - End Developer</h5>
-                        <a href="#" class="btn btn-hire" data-toggle="modal" data-target="#hire">Hire Me.</a>
-                        <a href="https://doc-14-98-docs.googleusercontent.com/docs/securesc/ase7hljahlsp5et030vgrqic18iof0bj/1a6p7eok3td4mqk43geb6o7i9lisohbr/1595786775000/06836180063455411987/06836180063455411987/1te5XuNBjnSjGLetAmchVi2eVrTYQF4g4?e=download&authuser=0&nonce=6ahp3tde2mhle&user=06836180063455411987&hash=mafip4cpp6055a84s012dlgppvffj6aj" class="ml-3 resume">Download Resume</a> 
+                        <h5 class="mb-5" id="position"></h5>
+                        <a href="#" class="button btn btn-hire" data-toggle="modal" data-target="#hire">Hire Me.</a>
+                        <a data-toggle="tooltip" data-placement="right" title="For more detail about him"
+                        href="https://drive.google.com/file/d/16_8Qq9RD-dkoNGKWBBI0BTsmi7A8KeU8/view?usp=sharing" class="ml-3 resume">Download Resume</a> 
                     </div>
                 </div>
             </div>
@@ -112,7 +113,7 @@
                   <div class="timeline-panel timeline-panel-add">
                     <div class="timeline-heading">
                         <h4>2020 - Now</h4>
-                        <h4 class="subheading">IT Indonesia</h4>
+                        <h4 class="subheading">Available</h4>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">Front - End Developer</p>
@@ -209,7 +210,9 @@
           <div class="row text-center">
             <div class="col-lg-4 col-sm-6">
               <div class="card porto1" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="1000">
-                <img class="card-img-top" src="img/porto/barber.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/barber.png" alt="Card image cap">
+                </div>            
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
                   <p class="card-text text-muted font-weight-light">Barbeer Shop</p>
@@ -218,7 +221,9 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="card porto2" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img class="card-img-top" src="img/porto/igracias.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/igracias.png" alt="Card image cap">
+                </div>              
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
                   <p class="card-text text-muted font-weight-light">Igracias Apps</p>
@@ -227,7 +232,9 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="card porto3" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="3000">
-                <img class="card-img-top" src="img/porto/planet pets.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/planet pets.png" alt="Card image cap">
+                </div>
                 <div class="card-body">
                   <h5 class="card-text">Mobile Apps Design</h5>
                   <p class="card-text text-muted font-weight-light">Planet Pets</p>
@@ -238,28 +245,34 @@
           <div class="row text-center">
             <div class="col-lg-4 col-sm-4">
               <div class="card porto1" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="1000" data-toggle="modal" data-target="#exampleModal">
-                <img class="card-img-top" src="img/porto/barber.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/travel.jpg" alt="Card image cap">
+                </div>            
                 <div class="card-body">
-                  <h5 class="card-text">UI/UX Design</h5>
-                  <p class="card-text text-muted font-weight-light">Lorem Ipsum</p>
+                  <h5 class="card-text">Web PHP Laravel</h5>
+                  <p class="card-text text-muted font-weight-light">Travelize</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
               <div class="card porto2" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img class="card-img-top" src="img/porto/igracias.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/bakool.jpg" alt="Card image cap">
+                </div>              
                 <div class="card-body">
-                  <h5 class="card-text">UI/UX Design</h5>
-                  <p class="card-text text-muted font-weight-light">Lorem Ipsum</p>
+                  <h5 class="card-text">Web Landing Page</h5>
+                  <p class="card-text text-muted font-weight-light">Bakool</p>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
               <div class="card porto3" style="width: 18rem;" data-aos="zoom-in-up" data-aos-duration="3000">
-                <img class="card-img-top" src="img/porto/planet pets.png" alt="Card image cap">
+                <div class="zoom">
+                  <img class="card-img-top" src="img/porto/wallet.jpg" alt="Card image cap">
+                </div>
                 <div class="card-body">
-                  <h5 class="card-text">UI/UX Design</h5>
-                  <p class="card-text text-muted font-weight-light">Lorem Ipsum</p>
+                  <h5 class="card-text">Web Landing Page</h5>
+                  <p class="card-text text-muted font-weight-light">Wallet Store</p>
                 </div>
               </div>
             </div>
@@ -295,12 +308,33 @@
               <h2 class="section-heading text-uppercase">Contact</h2>
               <hr>
               <div class="icon-contact">
-                <a href="mailto:gilarromadhon@gmail.com"><img src="img/contact/mail.png" alt="" data-aos="fade-up" data-aos-duration="1000"></a>                        
-                <a href="https://api.whatsapp.com/send?phone=6281214125517&text=Assalamualaikum%20wr%20wb"><img src="img/contact/wa.png" alt="" data-aos="fade-up" data-aos-duration="1500"></a>
-                <a href="https://www.linkedin.com/in/gilarromadhon/"><img src="img/contact/linkedin.png" alt="" data-aos="fade-up" data-aos-duration="2000"></a>
-                <a href="https://www.github.com/gilarromadhon/"><img src="img/contact/github.png" alt="" data-aos="fade-up" data-aos-duration="2500"></a>
-                <a href="https://www.dribbble.com/gilarromadhon"><img src="img/contact/dribbble.png" alt="" data-aos="fade-up" data-aos-duration="3000"></a>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                  <a class="contact" href="mailto:gilarromadhon@gmail.com">
+                    <i class="far fa-envelope icon"></i>
+                  </a>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1500">
+                  <a class="contact" href="https://api.whatsapp.com/send?phone=6281214125517&text=Hi,%selamat%20pagi">
+                    <i class="fab fa-whatsapp icon"></i>
+                  </a>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="2000">
+                  <a class="contact" href="https://www.github.com/gilarromadhon/">
+                    <i class="fab fa-github icon"></i>
+                  </a>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="2500">
+                  <a class="contact" href="https://www.linkedin.com/in/gilarromadhon/">
+                    <i class="fab fa-linkedin-in icon"></i>
+                  </a>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="3000">
+                  <a class="contact" href="https://www.dribbble.com/gilarromadhon">
+                    <i class="fab fa-dribbble icon"></i>
+                  </a>
+                </div>
               </div>
+
               <h6 class="font-weight-lighter text-muted">Copyright &copy; Gilar Romadhon 2020.</h6>
             </div>
           </div>
@@ -309,11 +343,39 @@
 
     <script src="style/jquery-3.5.1.min.js"></script>
     <script src="style/bootstrap/js/bootstrap.js"></script>
+    <script src="style/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
 </body>
 </html>
 
 
 <script>
     AOS.init();
+</script>
+
+<script>
+  new TypeIt("#position", {
+  // strings: "Front - End Developer",
+  speed: 75,
+  loop: true
+})
+  .type("Frnot", {delay: 300})
+  .move(-1)
+  .delete(2)
+  .type('on')
+  .move('END')
+  .type(' - End')
+  .type(' Devrloper')
+  .move(-5)
+  .delete(1)
+  .type('e')
+  .move('END')
+  .go();
+</script>
+
+<script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
 </script>
